git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@12 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/languages/fr.yml
+++ b/app/languages/fr.yml
@@ -133,6 +133,8 @@ app:
       title: Écritures
     journals:
       title: Journaux
+  application:
+    expired_session: 'Session expirée. Veuillez vous reconnecter.'
   authentication:
     no_authenticated: 'Vous n''avez pas pu être identifié. Le nom d''utilisateur ou le mot de passe doit être incorrect.'
     login:
