--- a/app/languages/fr.yml
+++ b/app/languages/fr.yml
@@ -138,10 +138,18 @@ app:
   authentication:
     no_authenticated: 'Vous n''avez pas pu être identifié. Le nom d''utilisateur ou le mot de passe doit être incorrect.'
     login:
-      title: 'Entrer dans Ekylibre'
+      title: 'Bienvenue sur Ekylibre'
       username: 'Nom d''utilisateur'
       password: 'Mot de passe'
       connect: 'Entrer'
+      lost_login: 'Nom d''utilisateur oublié ?'
+      lost_password: 'Mot de passe oublié ?'
+      register: 'Créer une nouvelle société'
+    register:
+      title: 'Enregistrer sa société'
+      step1: 'Etape 1/3'
+      step2: 'Etape 2/3'
+      step3: 'Etape 3/3'
   guide:
     index:
       title: 'Accueil'
@@ -155,4 +163,8 @@ app:
       title: 'Stocks'
   layouts:
     application:
+      admin: 'Administration'
       exit: 'Quitter Ekylibre'
+  'next': Suivant
+  'previous': Précédent
+  'finish': Terminer      
