--- a/app/languages/fr.yml
+++ b/app/languages/fr.yml
@@ -108,6 +108,16 @@ models:
       name: 'Nom' # (ou&nbsp;dénomination&nbsp;sociale)'
       siren: Numéro SIREN
       born_on: Créée le
+  department:
+    name: Service
+    attributes:
+      name: Nom
+  establishment:
+    name: Établissement
+    attributes:
+      name: Nom
+      siret: N° SIRET
+      note: Commentaire
   user:
     name: Utilisateur
     attributes:
@@ -143,6 +153,7 @@ app:
       title: Journaux
   application:
     expired_session: 'Session expirée. Veuillez vous reconnecter.'
+    access_denied: 'Vous n''avez pas le droit d''accéder à cette fonctionnalité'
   authentication:
     no_authenticated: 'Vous n''avez pas pu être identifié. Le nom d''utilisateur ou le mot de passe doit être incorrect.'
     login:
@@ -167,6 +178,9 @@ app:
       user_name_info: 'C''est le nom que vous utiliserez pour rentrer dans Ekylibre'
       user_password_hint: 'Pour avoir mot de passe "solide", il faut utiliser au minimum des majuscules, des minuscules et des chiffres'
       user_password_confirmation_info: 'Vous devez ressaisir votre mot de passe pour éviter qu''un mot de passe érroné soit enregistré'
+  company:
+    default_department_name: Gestion/Production
+    default_establishment_name: Établissement principal
   config:
     company:
       identity: Carte d'identité
@@ -177,11 +191,19 @@ app:
       bank_accounts: Comptes bancaires
       evolution: Historique
       values: Valeurs diverses
+      users: Utilisateurs
+      new_establishment: Ajouter un nouvel établissement
+      new_department: Ajouter un nouveau service
+#      new_employee: Ajouter un nouvel employé
+      new_bank_account: Ajouter un nouveau compte bancaire
+      new_user: Ajouter un nouvel utilisateur
     company_edit:
       title: 'Modification de la société %s'
       general: Vous pouvez modifier les différentes informations concernant votre société
       company_code_info: Ce code sert d'abréviation pour certaines impressions
-      
+    users_create:
+      title: 'Création d''un compte utilisateur'
+      user_locked_info: 'Si le compte est verrouillé, l''utilisateur ne pourra plus utiliser le logiciel'
   guide:
     index:
       title: 'Accueil'
@@ -198,6 +220,7 @@ app:
       admin: 'Administration'
       exit: 'Quitter Ekylibre'
   cancel: 'Annuler'
+  create: 'Créer'
   edit: 'Modifier'
   example: 'Exemple(s).&nbsp;: %s'
   finish: Terminer
