--- a/app/languages/fr.yml
+++ b/app/languages/fr.yml
@@ -124,6 +124,7 @@ models:
       name: 'Nom d''utilisateur'
       first_name: 'Prénom'
       last_name: 'Nom de famille'
+      locked: 'Compte verrouillé'
       password: 'Mot de passe'
       password_confirmation: 'Confirmation du mot&nbsp;de&nbsp;passe'
 
