--- a/app/languages/fr.yml
+++ b/app/languages/fr.yml
@@ -153,6 +153,8 @@ app:
     journals:
       title: Journaux
       new_journal: Créer un nouveau journal
+    journals_create:
+      title: Créer un nouveau journal
   application:
     expired_session: 'Session expirée. Veuillez vous reconnecter.'
     access_denied: 'Vous n''avez pas le droit d''accéder à cette fonctionnalité'
@@ -228,7 +230,7 @@ app:
   cancel: 'Annuler'
   create: 'Créer'
   edit: 'Modifier'
-  example: 'Exemple(s).&nbsp;: %s'
+  example: 'Exemple&nbsp;: %s'
   finish: Terminer
   hint: 'Astuce&nbsp;: %s'
   info: 'Information&nbsp;: %s'
