git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@160 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/languages/fr.yml
+++ b/app/languages/fr.yml
@@ -247,6 +247,8 @@ app:
       title: 'Achats'
     stocks:
       title: 'Stocks'
+  help:
+    error_no_file:'Aucun fichier d''aide disponible'
   journal:
     error_limited_period: '.'
     error_limited_financialyear: 'Le journal ne peut être crée au-delà d''une certaine date de l''année.' 	    
