--- a/app/languages/fr.yml
+++ b/app/languages/fr.yml
@@ -263,6 +263,7 @@ app:
     error_amount_balance2: 'Une écriture ne fournit pas d''entrée négative à un compte.'
     error_amount_rate: 'Le taux de conversion n''existe pas.'	
   journal_record:
+    error_printed_date: 'La pièce comptabilisée n''existe pas.'
     error_closed_journal: 'Le journal est clôturé donc vous ne pouvez plus ajouter de pièces.' 
     error_limited_financialyear: 'L''ajout de pièce est limité à une année financière donnée.'
     error_limited_period: 'L''ajout de pièce est limité à une période donnée.'
