git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@176 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/languages/fr.yml
+++ b/app/languages/fr.yml
@@ -153,8 +153,8 @@ app:
       title: Écritures
       select: 'Sélectionnez le journal'
       record_number: 'Pièce n°'
-      created: 'Crée le'
-      printed: 'Saisie le'
+      created: 'Enregistrée le'
+      printed: 'Reçue le'
       label: 'Libellé'
       account_number: 'Compte n°'
       debit: 'Débit'
