--- a/app/languages/fr.yml
+++ b/app/languages/fr.yml
@@ -153,12 +153,12 @@ app:
       title: Écritures
       select: 'Sélectionnez le journal :'
       record_number: 'Pièce n°'
-      created: 'Enregistrée le'
-      printed: 'Reçue le'
+      record_created: 'Enregistrée le'
+      record_printed: 'Reçue le'
       label: 'Libellé'
       account_number: 'Compte n°'
-      debit: 'Débit'
-      credit: 'Crédit'
+      record_debit: 'Débit'
+      record_credit: 'Crédit'
       entry_validate: 'Valider l''écriture'
       confirmation: 'Êtes-vous sûr de votre saisie ?'      
     journals:
