git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@190 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/languages/fr.yml
+++ b/app/languages/fr.yml
@@ -160,7 +160,11 @@ app:
       record_debit: 'Débit'
       record_credit: 'Crédit'
       entry_validate: 'Valider l''écriture'
-      confirmation: 'Êtes-vous sûr de votre saisie ?'      
+      confirmation: 'Êtes-vous sûr de votre saisie ?'     
+    print:
+      title: Impression 
+    print_balance_sheet:
+      title: Impression du bilan 
     journals:
       title: Journaux
       create: Créer un nouveau journal
