git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@219 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/languages/fr.yml
+++ b/app/languages/fr.yml
@@ -148,7 +148,9 @@ app:
   accountancy:
     title: Comptabilité
     accounts:
-      title: Comptes
+      title: Comptes comptables
+    bank_accounts: 
+      title: Comptes bancaires
     entries:
       title: Écritures
       select: 'Sélectionnez le journal :'
