--- a/app/languages/fr.yml
+++ b/app/languages/fr.yml
@@ -244,13 +244,48 @@ app:
       user_password_hint: 'Pour avoir mot de passe "solide", il faut utiliser au minimum des majuscules, des minuscules et des chiffres'
       user_password_confirmation_info: 'Vous devez ressaisir votre mot de passe pour éviter qu''un mot de passe érroné soit enregistré'
   company:
-    default_bank_journal_nature_name: Banque
-    default_department_name: Gestion/Production
-    default_establishment_name: Établissement principal
-    default_financialyear_code: 1A2
-    default_operations_journal_nature_name: Opérations Diverses
-    default_purchases_journal_nature_name: Achats
-    default_sales_journal_nature_name: Ventes
+    title: Companie
+    index:
+       title: ehezhjezjhzej
+       identity: 'Carte d''identité'
+       statistics: Chiffres
+       establishments: Établissements
+       departments: Services
+       employees: Employés
+       bank_accounts: Comptes bancaires
+       evolution: Historique
+       values: Valeurs diverses
+       users: Utilisateurs
+       new_establishment: Ajouter un nouvel établissement
+       new_department: Ajouter un nouveau service
+#      new_employee: Ajouter un nouvel employé
+       new_bank_account: Ajouter un nouveau compte bancaire
+       new_user: Ajouter un nouvel utilisateur
+       default_bank_journal_nature_name: Banque
+       default_department_name: Gestion/Production
+       default_establishment_name: Établissement principal
+       default_financialyear_code: 1A2
+       default_operations_journal_nature_name: Opérations Diverses
+       default_purchases_journal_nature_name: Achats
+       default_sales_journal_nature_name: Ventes
+       establishments_number: Nombre d'établissements
+       departments_number: Nombre de services
+       users_number: Nombre d'utilisateurs
+       up: modifier
+    edit:
+      title: 'Modification de la société %s'
+      general: Vous pouvez modifier les différentes informations concernant votre société
+      company_code_info: 'Ce code sert d''abréviation pour certaines impressions'
+    user:
+       title: dez
+       change_password: Modifier le mot de passe
+    users:
+       users_listing: Liste des utilisateurs
+    establishments:
+       establishments_listing: Liste des établissements
+    departments:
+       departments_listing: Liste des services		
+
   config:
     company:
       identity: 'Carte d''identité'
