--- a/app/languages/fr.yml
+++ b/app/languages/fr.yml
@@ -244,7 +244,7 @@ app:
       user_password_hint: 'Pour avoir mot de passe "solide", il faut utiliser au minimum des majuscules, des minuscules et des chiffres'
       user_password_confirmation_info: 'Vous devez ressaisir votre mot de passe pour éviter qu''un mot de passe érroné soit enregistré'
   company:
-    title: Companie
+    title: Société
     index:
        title: ehezhjezjhzej
        identity: 'Carte d''identité'
@@ -317,21 +317,6 @@ app:
       title: 'À propos d''Ekylibre'
     accountancy:
       title: 'Comptabilité'
-    management:
-      title: 'Gestion commerciale'
-      consult_purchases: 'Consulter l''état des achats'
-      consult_sales: 'Consulter l''état des ventes'
-      consult_stocks: 'Consulter l''état des stocks'
-      new_sale: 'Nouveau devis'
-      purchases: 'Achats'
-      sales: 'Ventes'
-      stocks: 'Stocks'
-    sales:
-      title: 'Ventes'
-    purchases:
-      title: 'Achats'
-    stocks:
-      title: 'Stocks'
   help:
     error_no_file: 'Aucun fichier d''aide disponible pour cette partie de l''application'
     search:
@@ -364,10 +349,28 @@ app:
     application:
   management:
     title: 'Gestion'
-    sale:
-      title: Devis
-      general: Général
-      products: Produits
+    index:      
+      title: 'Gestion commerciale'
+      consult_purchases: 'Consulter l''état des achats'
+      consult_sales: 'Consulter l''état des ventes'
+      consult_stocks: 'Consulter l''état des stocks'
+      new_purchase: 'Nouvel achat'
+      new_sale: 'Nouvelle vente'
+      parameters: 'Paramètres'
+      products: 'Produits'
+      purchases: 'Achats'
+      sales: 'Ventes'
+      stocks: 'Stocks'
+      stocks_locations: 'Gérer les stocks'
+    sales_new:
+      title: 'Nouvelle vente'
+    sales_step_1: 'Client'
+    sales_step_2: 'Description'
+    sales_step_3: 'Produits'
+    sales_step_4: 'Livraisons'
+    sales_step_5: 'Factures'
+    sales_step_6: 'Règlements'
+    sales_step_7: 'Impression'
   cancel: 'Annuler'
   create: 'Créer'
   update: 'Modifier'
