git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@231 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/languages/fr.yml
+++ b/app/languages/fr.yml
@@ -410,8 +410,11 @@ app:
       products: 'Produits'
       purchases: 'Achats'
       sales: 'Ventes'
+      shelves: 'Catégories de produit'
+      units: 'Unités de mesure'
       stocks: 'Stocks'
       stocks_locations: 'Gérer les stocks'
+      taxes: 'Taxes'
     products:
       title: 'Produits'
     sales_new:
