git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@232 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/languages/fr.yml
+++ b/app/languages/fr.yml
@@ -266,6 +266,7 @@ app:
     title: Société
     default_establishment_name: Établissement principal 
     index:
+      companie: Informations sur la société
       title: ehezhjezjhzej
       identity: 'Carte d''identité'
       statistics: Chiffres
