--- a/app/languages/fr.yml
+++ b/app/languages/fr.yml
@@ -269,6 +269,20 @@ app:
       user_name_info: 'C''est le nom que vous utiliserez pour rentrer dans Ekylibre'
       user_password_hint: 'Pour avoir mot de passe "solide", il faut utiliser au minimum des majuscules, des minuscules et des chiffres'
       user_password_confirmation_info: 'Vous devez ressaisir votre mot de passe pour éviter qu''un mot de passe érroné soit enregistré'
+
+  relations: 
+    title: Gestion des relations
+    entities:
+      title: Liste des entités
+    entities_create: 
+      title: Création d'une nouvelle entité
+    entities_update:
+      title: Modification de l'entité
+    entities_form:
+      title: Renseignez les différentes caractéristiques de l'entité
+    index:
+      entities: Liste des entités
+      entities_create: Créer une nouvelle entité
   company:
     title: Société
     index:
@@ -310,15 +324,15 @@ app:
       users_listing: Liste des utilisateurs
       getback: Retour à la fiche de société
     users_create:
-       title: 'Création d''un nouvel utilisateur'
+      title: Création d''un nouvel utilisateur
     users_update:
        title: 'Modification de l''utilisateur'
     users_form:
       subtitle: 'Renseignez les différentes caractéristiques de l''utilisateur'
     establishments:
-    establishments_listing: Liste des établissements
-    establishments_create: Ajouter un nouvel établissement
-    getback: Retour à la fiche de société
+      getback: Retour à la fiche de société
+      establishments_listing: Liste des établissements
+      establishments_create: Ajouter un nouvel établissement
     establishments_create:
       title: 'Ajout d''un nouvel etablissement'
     establishments_update:
