git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@238 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/languages/fr.yml
+++ b/app/languages/fr.yml
@@ -162,7 +162,7 @@ app:
       title: Comptes
     entries:
       title: Écritures
-      select: 'Sélectionnez le journal :'
+      select: 'Sélectionnez un journal :'
       number_records: 'Nombre de pièces à afficher :'
       record_number: 'Pièce n°'
       record_created: 'Enregistrée le'
@@ -176,6 +176,21 @@ app:
       confirmation: 'Êtes-vous sûr de votre saisie ?'     
       balanced_entries: 'Vert : pièce équilibrée'
       unbalanced_entries: 'Rouge : pièce non équilibrée'
+    operations:
+      title: Opérations comptables
+      list_of_statements: Liste de relevés de comptes
+      select_bank_account: 'Sélectionnez un compte bancaire:'
+      close_financialyear: Clôture d''exercice
+      select_financialyear: 'Sélectionnez un exercice:'
+      list_of_entries: Lettrage d''écriture
+      select_account: 'Sélectionnez un compte comptable:'
+      list_of_journal_entries: Liste d''écriture
+      select_journal: 'Sélectionnez un journal:'
+      list_of_documents: Impression document comptable
+      select_document: 'Sélectionnez un document:'
+      book: Grand Livre
+      bilan: Bilan 
+      balance: Balance
     print:
       title: Impression 
       print_balance_sheet: Impression du bilan Comptable
@@ -192,32 +207,37 @@ app:
       title: Journaux
       create: Créer un nouveau journal
     journals_create:
-      title: Créer un nouveau journal
+      title: Création d'un nouveau journal
     journals_update:
-      title: Modifier le journal
+      title: Modification du journal
     journals_close:
       title: Clôture du journal
+      journal_date: 'Sélectionner un mois :'
+    financialyears_close:
+      title: Clôture de l'exercice
+      financialyear_date: 'Sélectionnez un mois :'
     accounts:
       title: Comptes
       create: Créer un nouveau compte
-      update: Modifier un compte
-      delete: Supprimer un compte
     accounts_create:
-      title: Créer un nouveau compte
+      title: Création d'un nouveau compte
     accounts_update:
-      title: Modifier le compte
+      title: Modification du compte
     accounts_letter:
       title: Liste des écritures non lettrées
-      entry_record: Numéro de pièce
-      entry_name: Nom de l''écriture		    
+      entry_name: Intitulé	
+      entry_debit: Débit	
+      entry_credit: Crédit
+      entry_currency_rate: Taux utilisé
+      entry_validate: Valider l'écriture	
     bank_accounts:
       title: Comptes bancaires
       create: Créer un nouveau compte bancaire
     bank_accounts_create:
-      title: Créer un nouveau compte bancaire
+      title: Création d'un nouveau compte bancaire
       name:   Nom
     bank_accounts_update:
-      title: Modifier le compte bancaire	
+      title: Modification du compte bancaire	
     find_accounts:
       account_number: 'Numéro de compte '
       account_name: 'Nom du compte '
@@ -230,6 +250,19 @@ app:
     find_journals:
       journal_id: Numéro de journal
       journal_name: Nom du journal
+    statements:
+      title: Liste des relevés de compte
+      create: Créer un relevé de compte
+    statements_new:
+      title:  Création d'un relevé de compte
+    statements_update:
+      title: Modification du relevé de compte
+    statements_point:
+      title: Pointage d'écriture
+      entry_name: Intitulé
+      entry_debit: Débit
+      entry_credit: Crédit
+      entry_currency_rate: Taux utilisé
   accounting_system:
     1: 'Comptes de capitaux'
     2: 'Comptes d''immobilisations'
